parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np main
Rule 2     programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np clase main
Rule 3     programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np clase var main
Rule 4     programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np clase var funcion main
Rule 5     programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np clase funcion main
Rule 6     programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np var main
Rule 7     programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np var funcion main
Rule 8     programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np funcion main
Rule 9     main -> MAIN fillMain_np PARENTESISIZQ PARENTESISDER LLAVEIZQ LLAVEDER
Rule 10    main -> MAIN fillMain_np PARENTESISIZQ PARENTESISDER LLAVEIZQ estatuto LLAVEDER
Rule 11    clase -> CLASS ID getnameClass_np getSonClass_np saveClass_np DOSPUNTOS tipo_clase ID LLAVEIZQ bloque_clase LLAVEDER PUNTOCOMA
Rule 12    clase -> CLASS ID getnameClass_np getSonClass_np saveClass_np DOSPUNTOS tipo_clase ID LLAVEIZQ bloque_clase LLAVEDER PUNTOCOMA clase
Rule 13    clase -> CLASS ID getnameClass_np getSonClass_np saveClass_np DOSPUNTOS tipo_clase ID LLAVEIZQ LLAVEDER PUNTOCOMA
Rule 14    clase -> CLASS ID getnameClass_np getSonClass_np saveClass_np DOSPUNTOS tipo_clase ID LLAVEIZQ LLAVEDER PUNTOCOMA clase
Rule 15    clase -> CLASS ID getnameClass_np getFatherClass_np saveClass_np LLAVEIZQ bloque_clase LLAVEDER PUNTOCOMA
Rule 16    clase -> CLASS ID getnameClass_np getFatherClass_np saveClass_np LLAVEIZQ bloque_clase LLAVEDER PUNTOCOMA clase
Rule 17    clase -> CLASS ID getnameClass_np getFatherClass_np saveClass_np LLAVEIZQ LLAVEDER PUNTOCOMA
Rule 18    clase -> CLASS ID getnameClass_np getFatherClass_np saveClass_np LLAVEIZQ LLAVEDER PUNTOCOMA clase
Rule 19    tipo_clase -> PUBLIC
Rule 20    tipo_clase -> PROTECTED
Rule 21    tipo_clase -> PRIVATE
Rule 22    var -> VAR scopeGlobal_np varp
Rule 23    varp -> tipo_compuesto ID PUNTOCOMA
Rule 24    varp -> tipo_compuesto ID PUNTOCOMA varp
Rule 25    varp -> tipo_simple ID getID_np PUNTOCOMA saveVar_np
Rule 26    varp -> tipo_simple ID getID_np PUNTOCOMA saveVar_np varp
Rule 27    varp -> tipo_simple ID getID_np CORCHETEIZQ CTEI CORCHETEDER PUNTOCOMA saveVar_np
Rule 28    varp -> tipo_simple ID getID_np CORCHETEIZQ CTEI CORCHETEDER PUNTOCOMA saveVar_np varp
Rule 29    varp -> tipo_simple ID getID_np CORCHETEIZQ CTEI CORCHETEDER CORCHETEIZQ CTEI CORCHETEDER PUNTOCOMA saveVar_np
Rule 30    varp -> tipo_simple ID getID_np CORCHETEIZQ CTEI CORCHETEDER CORCHETEIZQ CTEI CORCHETEDER PUNTOCOMA saveVar_np varp
Rule 31    tipo_simple -> INT getType_np
Rule 32    tipo_simple -> FLOAT getType_np
Rule 33    tipo_simple -> CHAR getType_np
Rule 34    tipo_simple -> BOOL getType_np
Rule 35    tipo_simple_func -> INT getTypeFunc_np
Rule 36    tipo_simple_func -> FLOAT getTypeFunc_np
Rule 37    tipo_simple_func -> CHAR getTypeFunc_np
Rule 38    tipo_simple_func -> BOOL getTypeFunc_np
Rule 39    tipo_compuesto -> ID
Rule 40    funcion -> FUNC tipo_simple_func ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA dec_var saveFunc_np cuerpo
Rule 41    funcion -> FUNC tipo_simple_func ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA dec_var saveFunc_np cuerpo funcion
Rule 42    funcion -> FUNC tipo_simple_func ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA saveFunc_np cuerpo
Rule 43    funcion -> FUNC tipo_simple_func ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA saveFunc_np cuerpo funcion
Rule 44    funcion -> FUNC VOID getTypeFunc_np ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA dec_var saveFunc_np cuerpo
Rule 45    funcion -> FUNC VOID getTypeFunc_np ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA dec_var saveFunc_np cuerpo funcion
Rule 46    funcion -> FUNC VOID getTypeFunc_np ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA saveFunc_np cuerpo
Rule 47    funcion -> FUNC VOID getTypeFunc_np ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA cuerpo saveFunc_np funcion
Rule 48    dec_var -> VAR scopeFunc_np dec_varp
Rule 49    dec_varp -> tipo_simple ID getID_np PUNTOCOMA saveVar_np dec_varp
Rule 50    dec_varp -> tipo_simple ID getID_np PUNTOCOMA saveVar_np
Rule 51    dec_varp -> tipo_simple ID getID_np CORCHETEIZQ CTEI CORCHETEDER PUNTOCOMA saveVar_np dec_varp
Rule 52    dec_varp -> tipo_simple ID getID_np CORCHETEIZQ CTEI CORCHETEDER PUNTOCOMA saveVar_np
Rule 53    dec_varp -> tipo_simple ID getID_np CORCHETEIZQ CTEI CORCHETEDER CORCHETEIZQ CTEI CORCHETEDER PUNTOCOMA saveVar_np dec_varp
Rule 54    dec_varp -> tipo_simple ID getID_np CORCHETEIZQ CTEI CORCHETEDER CORCHETEIZQ CTEI CORCHETEDER PUNTOCOMA saveVar_np
Rule 55    parametros -> INT ID getParameters_np saveParameter_np
Rule 56    parametros -> INT ID getParameters_np COMA saveParameter_np parametros
Rule 57    parametros -> FLOAT ID getParameters_np saveParameter_np
Rule 58    parametros -> FLOAT ID getParameters_np COMA saveParameter_np parametros
Rule 59    parametros -> CHAR ID getParameters_np saveParameter_np
Rule 60    parametros -> CHAR ID getParameters_np COMA saveParameter_np parametros
Rule 61    parametros -> BOOL ID getParameters_np saveParameter_np
Rule 62    parametros -> BOOL ID getParameters_np COMA saveParameter_np parametros
Rule 63    cuerpo -> LLAVEIZQ estatuto RETURN exp PUNTOCOMA LLAVEDER
Rule 64    cuerpo -> LLAVEIZQ estatuto LLAVEDER
Rule 65    bloque_clase -> ATTRIBUTE scopeClass_np DOSPUNTOS atributo METHOD DOSPUNTOS metodo
Rule 66    atributo -> tipo_clase tipo_simple ID getID_np PUNTOCOMA saveVar_np
Rule 67    atributo -> tipo_clase tipo_simple ID getID_np PUNTOCOMA saveVar_np atributo
Rule 68    metodo -> tipo_clase tipo_simple ID PARENTESISIZQ parametros PARENTESISDER cuerpo
Rule 69    metodo -> tipo_clase tipo_simple ID PARENTESISIZQ parametros PARENTESISDER cuerpo metodo
Rule 70    metodo -> tipo_clase VOID ID PARENTESISIZQ parametros PARENTESISDER cuerpo
Rule 71    metodo -> tipo_clase VOID ID PARENTESISIZQ parametros PARENTESISDER cuerpo metodo
Rule 72    estatuto -> asignacion PUNTOCOMA multiDiv_np plusMinus_np relationalOp_np and_np or_np igual_np
Rule 73    estatuto -> asignacion PUNTOCOMA multiDiv_np plusMinus_np relationalOp_np and_np or_np igual_np estatuto
Rule 74    estatuto -> llamada PUNTOCOMA
Rule 75    estatuto -> llamada PUNTOCOMA estatuto
Rule 76    estatuto -> lee PUNTOCOMA
Rule 77    estatuto -> lee PUNTOCOMA estatuto
Rule 78    estatuto -> escribe PUNTOCOMA
Rule 79    estatuto -> escribe PUNTOCOMA estatuto
Rule 80    estatuto -> condicion
Rule 81    estatuto -> condicion estatuto
Rule 82    estatuto -> ciclo_w
Rule 83    estatuto -> ciclo_w estatuto
Rule 84    estatuto -> ciclo_f
Rule 85    estatuto -> ciclo_f estatuto
Rule 86    estatuto -> llamada_metodo PUNTOCOMA estatuto
Rule 87    estatuto -> llamada_atributo PUNTOCOMA estatuto
Rule 88    asignacion -> variable IGUAL saveOperadorIgual_np exp
Rule 89    llamada -> ID PARENTESISIZQ llamadap PARENTESISDER
Rule 90    llamadap -> exp
Rule 91    llamadap -> exp COMA llamadap
Rule 92    lee -> READ PARENTESISIZQ leep PARENTESISDER
Rule 93    leep -> variable readQuad_np
Rule 94    leep -> variable readQuad_np COMA leep
Rule 95    variable -> ID saveIDpilaO_np
Rule 96    variable -> ID CORCHETEIZQ exp CORCHETEDER
Rule 97    variable -> ID CORCHETEIZQ exp CORCHETEDER CORCHETEIZQ exp CORCHETEDER
Rule 98    escribe -> WRITE PARENTESISIZQ escribep PARENTESISDER
Rule 99    escribep -> exp writeQuad_np
Rule 100   escribep -> exp writeQuad_np COMA escribep
Rule 101   escribep -> LETRERO pushLetrero_np writeQuad_np
Rule 102   escribep -> LETRERO pushLetrero_np writeQuad_np COMA escribep
Rule 103   condicion -> IF PARENTESISIZQ exp PARENTESISDER multiDiv_np plusMinus_np relationalOp_np and_np or_np ifQuad_np LLAVEIZQ estatuto LLAVEDER fillIfQuad_np
Rule 104   condicion -> IF PARENTESISIZQ exp PARENTESISDER multiDiv_np plusMinus_np relationalOp_np and_np or_np ifQuad_np LLAVEIZQ estatuto LLAVEDER ELSE elseQuad_np LLAVEIZQ estatuto LLAVEDER fillIfQuad_np
Rule 105   ciclo_w -> WHILE whileQuadSaltos_np PARENTESISIZQ exp PARENTESISDER multiDiv_np plusMinus_np relationalOp_np and_np or_np whileQuad_np DO LLAVEIZQ estatuto LLAVEDER fillWhileQuad_np
Rule 106   ciclo_f -> FOR variable_for IGUAL exp multiDiv_np plusMinus_np relationalOp_np and_np or_np forInitialExp_np TO exp multiDiv_np plusMinus_np relationalOp_np and_np or_np forResultExp_np DO LLAVEIZQ estatuto LLAVEDER endFor_np
Rule 107   variable_for -> ID validarIdFor_np
Rule 108   exp -> t_exp
Rule 109   exp -> t_exp or_np OR saveOperadorOr_np exp
Rule 110   t_exp -> g_exp
Rule 111   t_exp -> g_exp and_np AND saveOperadorAnd_np t_exp
Rule 112   g_exp -> m_exp
Rule 113   g_exp -> m_exp relationalOp_np EQUAL saveOperadorRelacional_np m_exp
Rule 114   g_exp -> m_exp relationalOp_np NOT saveOperadorRelacional_np m_exp
Rule 115   g_exp -> m_exp relationalOp_np GREATERTHAN saveOperadorRelacional_np m_exp
Rule 116   g_exp -> m_exp relationalOp_np LESSTHAN saveOperadorRelacional_np m_exp
Rule 117   m_exp -> t
Rule 118   m_exp -> t plusMinus_np MAS saveOperadorMasMenos_np m_exp
Rule 119   m_exp -> t plusMinus_np MENOS saveOperadorMasMenos_np m_exp
Rule 120   t -> f
Rule 121   t -> f multiDiv_np POR saveOperadorMultiDivision_np t
Rule 122   t -> f multiDiv_np DIV saveOperadorMultiDivision_np t
Rule 123   f -> PARENTESISIZQ exp PARENTESISDER
Rule 124   f -> CTEI saveConstantInt_np
Rule 125   f -> CTEF saveConstantFloat_np
Rule 126   f -> CTECH saveConstantChar_np
Rule 127   f -> variable
Rule 128   f -> llamada
Rule 129   f -> llamada_metodo
Rule 130   f -> llamada_atributo
Rule 131   llamada_metodo -> ID PUNTO ID PARENTESISIZQ llamada_metodop PARENTESISDER
Rule 132   llamada_metodop -> CTEI
Rule 133   llamada_metodop -> CTEI COMA llamada_metodop
Rule 134   llamada_metodop -> CTEF
Rule 135   llamada_metodop -> CTEF COMA llamada_metodop
Rule 136   llamada_metodop -> CTECH
Rule 137   llamada_metodop -> CTECH COMA llamada_metodop
Rule 138   llamada_metodop -> ID
Rule 139   llamada_metodop -> ID COMA llamada_metodop
Rule 140   llamada_atributo -> ID PUNTO ID
Rule 141   empty -> <empty>
Rule 142   getnameClass_np -> empty
Rule 143   getFatherClass_np -> empty
Rule 144   getSonClass_np -> empty
Rule 145   saveClass_np -> empty
Rule 146   getID_np -> empty
Rule 147   getType_np -> empty
Rule 148   scopeClass_np -> empty
Rule 149   scopeFunc_np -> empty
Rule 150   scopeGlobal_np -> empty
Rule 151   saveVar_np -> empty
Rule 152   saveConstantInt_np -> empty
Rule 153   saveConstantFloat_np -> empty
Rule 154   saveConstantChar_np -> empty
Rule 155   getIDFunc_np -> empty
Rule 156   getTypeFunc_np -> empty
Rule 157   getParameters_np -> empty
Rule 158   saveParameter_np -> empty
Rule 159   saveFunc_np -> empty
Rule 160   saveIDpilaO_np -> empty
Rule 161   saveOperadorMultiDivision_np -> empty
Rule 162   saveOperadorMasMenos_np -> empty
Rule 163   saveOperadorRelacional_np -> empty
Rule 164   saveOperadorOr_np -> empty
Rule 165   saveOperadorAnd_np -> empty
Rule 166   saveOperadorIgual_np -> empty
Rule 167   gotoMain_np -> empty
Rule 168   fillMain_np -> empty
Rule 169   multiDiv_np -> empty
Rule 170   plusMinus_np -> empty
Rule 171   relationalOp_np -> empty
Rule 172   and_np -> empty
Rule 173   or_np -> empty
Rule 174   igual_np -> empty
Rule 175   ifQuad_np -> empty
Rule 176   fillIfQuad_np -> empty
Rule 177   elseQuad_np -> empty
Rule 178   whileQuadSaltos_np -> empty
Rule 179   whileQuad_np -> empty
Rule 180   fillWhileQuad_np -> empty
Rule 181   validarIdFor_np -> empty
Rule 182   forInitialExp_np -> empty
Rule 183   forResultExp_np -> empty
Rule 184   endFor_np -> empty
Rule 185   readQuad_np -> empty
Rule 186   pushLetrero_np -> empty
Rule 187   writeQuad_np -> empty

Terminals, with rules where they appear

AND                  : 111
ATTRIBUTE            : 65
BOOL                 : 34 38 61 62
CHAR                 : 33 37 59 60
CLASS                : 11 12 13 14 15 16 17 18
COMA                 : 56 58 60 62 91 94 100 102 133 135 137 139
CORCHETEDER          : 27 28 29 29 30 30 51 52 53 53 54 54 96 97 97
CORCHETEIZQ          : 27 28 29 29 30 30 51 52 53 53 54 54 96 97 97
CTECH                : 126 136 137
CTEF                 : 125 134 135
CTEI                 : 27 28 29 29 30 30 51 52 53 53 54 54 124 132 133
DIV                  : 122
DO                   : 105 106
DOSPUNTOS            : 11 12 13 14 65 65
ELSE                 : 104
EQUAL                : 113
FLOAT                : 32 36 57 58
FOR                  : 106
FUNC                 : 40 41 42 43 44 45 46 47
GREATERTHAN          : 115
ID                   : 1 2 3 4 5 6 7 8 11 11 12 12 13 13 14 14 15 16 17 18 23 24 25 26 27 28 29 30 39 40 41 42 43 44 45 46 47 49 50 51 52 53 54 55 56 57 58 59 60 61 62 66 67 68 69 70 71 89 95 96 97 107 131 131 138 139 140 140
IF                   : 103 104
IGUAL                : 88 106
INT                  : 31 35 55 56
LESSTHAN             : 116
LETRERO              : 101 102
LLAVEDER             : 9 10 11 12 13 14 15 16 17 18 63 64 103 104 104 105 106
LLAVEIZQ             : 9 10 11 12 13 14 15 16 17 18 63 64 103 104 104 105 106
MAIN                 : 9 10
MAS                  : 118
MENOS                : 119
METHOD               : 65
NOT                  : 114
OR                   : 109
PARENTESISDER        : 9 10 40 41 42 43 44 45 46 47 68 69 70 71 89 92 98 103 104 105 123 131
PARENTESISIZQ        : 9 10 40 41 42 43 44 45 46 47 68 69 70 71 89 92 98 103 104 105 123 131
POR                  : 121
PRIVATE              : 21
PROGRAM              : 1 2 3 4 5 6 7 8
PROTECTED            : 20
PUBLIC               : 19
PUNTO                : 131 140
PUNTOCOMA            : 1 2 3 4 5 6 7 8 11 12 13 14 15 16 17 18 23 24 25 26 27 28 29 30 40 41 42 43 44 45 46 47 49 50 51 52 53 54 63 66 67 72 73 74 75 76 77 78 79 86 87
READ                 : 92
RETURN               : 63
TO                   : 106
VAR                  : 22 48
VOID                 : 44 45 46 47 70 71
WHILE                : 105
WRITE                : 98
error                : 

Nonterminals, with rules where they appear

and_np               : 72 73 103 104 105 106 106 111
asignacion           : 72 73
atributo             : 65 67
bloque_clase         : 11 12 15 16
ciclo_f              : 84 85
ciclo_w              : 82 83
clase                : 2 3 4 5 12 14 16 18
condicion            : 80 81
cuerpo               : 40 41 42 43 44 45 46 47 68 69 70 71
dec_var              : 40 41 44 45
dec_varp             : 48 49 51 53
elseQuad_np          : 104
empty                : 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187
endFor_np            : 106
escribe              : 78 79
escribep             : 98 100 102
estatuto             : 10 63 64 73 75 77 79 81 83 85 86 87 103 104 104 105 106
exp                  : 63 88 90 91 96 97 97 99 100 103 104 105 106 106 109 123
f                    : 120 121 122
fillIfQuad_np        : 103 104
fillMain_np          : 9 10
fillWhileQuad_np     : 105
forInitialExp_np     : 106
forResultExp_np      : 106
funcion              : 4 5 7 8 41 43 45 47
g_exp                : 110 111
getFatherClass_np    : 15 16 17 18
getIDFunc_np         : 1 2 3 4 5 6 7 8 40 41 42 43 44 45 46 47
getID_np             : 25 26 27 28 29 30 49 50 51 52 53 54 66 67
getParameters_np     : 55 56 57 58 59 60 61 62
getSonClass_np       : 11 12 13 14
getTypeFunc_np       : 1 2 3 4 5 6 7 8 35 36 37 38 44 45 46 47
getType_np           : 31 32 33 34
getnameClass_np      : 11 12 13 14 15 16 17 18
gotoMain_np          : 1 2 3 4 5 6 7 8
ifQuad_np            : 103 104
igual_np             : 72 73
lee                  : 76 77
leep                 : 92 94
llamada              : 74 75 128
llamada_atributo     : 87 130
llamada_metodo       : 86 129
llamada_metodop      : 131 133 135 137 139
llamadap             : 89 91
m_exp                : 112 113 113 114 114 115 115 116 116 118 119
main                 : 1 2 3 4 5 6 7 8
metodo               : 65 69 71
multiDiv_np          : 72 73 103 104 105 106 106 121 122
or_np                : 72 73 103 104 105 106 106 109
parametros           : 40 41 42 43 44 45 46 47 56 58 60 62 68 69 70 71
plusMinus_np         : 72 73 103 104 105 106 106 118 119
programa             : 0
pushLetrero_np       : 101 102
readQuad_np          : 93 94
relationalOp_np      : 72 73 103 104 105 106 106 113 114 115 116
saveClass_np         : 11 12 13 14 15 16 17 18
saveConstantChar_np  : 126
saveConstantFloat_np : 125
saveConstantInt_np   : 124
saveFunc_np          : 40 41 42 43 44 45 46 47
saveIDpilaO_np       : 95
saveOperadorAnd_np   : 111
saveOperadorIgual_np : 88
saveOperadorMasMenos_np : 118 119
saveOperadorMultiDivision_np : 121 122
saveOperadorOr_np    : 109
saveOperadorRelacional_np : 113 114 115 116
saveParameter_np     : 55 56 57 58 59 60 61 62
saveVar_np           : 25 26 27 28 29 30 49 50 51 52 53 54 66 67
scopeClass_np        : 65
scopeFunc_np         : 48
scopeGlobal_np       : 22
t                    : 117 118 119 121 122
t_exp                : 108 109 111
tipo_clase           : 11 12 13 14 66 67 68 69 70 71
tipo_compuesto       : 23 24
tipo_simple          : 25 26 27 28 29 30 49 50 51 52 53 54 66 67 68 69
tipo_simple_func     : 40 41 42 43
validarIdFor_np      : 107
var                  : 3 4 6 7
variable             : 88 93 94 127
variable_for         : 106
varp                 : 22 24 26 28 30
whileQuadSaltos_np   : 105
whileQuad_np         : 105
writeQuad_np         : 99 100 101 102

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np main
    (2) programa -> . PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np clase main
    (3) programa -> . PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np clase var main
    (4) programa -> . PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np clase var funcion main
    (5) programa -> . PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np clase funcion main
    (6) programa -> . PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np var main
    (7) programa -> . PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np var funcion main
    (8) programa -> . PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np funcion main

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np main
    (2) programa -> PROGRAM . getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np clase main
    (3) programa -> PROGRAM . getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np clase var main
    (4) programa -> PROGRAM . getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np clase var funcion main
    (5) programa -> PROGRAM . getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np clase funcion main
    (6) programa -> PROGRAM . getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np var main
    (7) programa -> PROGRAM . getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np var funcion main
    (8) programa -> PROGRAM . getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np funcion main
    (156) getTypeFunc_np -> . empty
    (141) empty -> .

    ID              reduce using rule 141 (empty -> .)

    getTypeFunc_np                 shift and go to state 3
    empty                          shift and go to state 4

state 3

    (1) programa -> PROGRAM getTypeFunc_np . ID getIDFunc_np PUNTOCOMA gotoMain_np main
    (2) programa -> PROGRAM getTypeFunc_np . ID getIDFunc_np PUNTOCOMA gotoMain_np clase main
    (3) programa -> PROGRAM getTypeFunc_np . ID getIDFunc_np PUNTOCOMA gotoMain_np clase var main
    (4) programa -> PROGRAM getTypeFunc_np . ID getIDFunc_np PUNTOCOMA gotoMain_np clase var funcion main
    (5) programa -> PROGRAM getTypeFunc_np . ID getIDFunc_np PUNTOCOMA gotoMain_np clase funcion main
    (6) programa -> PROGRAM getTypeFunc_np . ID getIDFunc_np PUNTOCOMA gotoMain_np var main
    (7) programa -> PROGRAM getTypeFunc_np . ID getIDFunc_np PUNTOCOMA gotoMain_np var funcion main
    (8) programa -> PROGRAM getTypeFunc_np . ID getIDFunc_np PUNTOCOMA gotoMain_np funcion main

    ID              shift and go to state 5


state 4

    (156) getTypeFunc_np -> empty .

    ID              reduce using rule 156 (getTypeFunc_np -> empty .)


state 5

    (1) programa -> PROGRAM getTypeFunc_np ID . getIDFunc_np PUNTOCOMA gotoMain_np main
    (2) programa -> PROGRAM getTypeFunc_np ID . getIDFunc_np PUNTOCOMA gotoMain_np clase main
    (3) programa -> PROGRAM getTypeFunc_np ID . getIDFunc_np PUNTOCOMA gotoMain_np clase var main
    (4) programa -> PROGRAM getTypeFunc_np ID . getIDFunc_np PUNTOCOMA gotoMain_np clase var funcion main
    (5) programa -> PROGRAM getTypeFunc_np ID . getIDFunc_np PUNTOCOMA gotoMain_np clase funcion main
    (6) programa -> PROGRAM getTypeFunc_np ID . getIDFunc_np PUNTOCOMA gotoMain_np var main
    (7) programa -> PROGRAM getTypeFunc_np ID . getIDFunc_np PUNTOCOMA gotoMain_np var funcion main
    (8) programa -> PROGRAM getTypeFunc_np ID . getIDFunc_np PUNTOCOMA gotoMain_np funcion main
    (155) getIDFunc_np -> . empty
    (141) empty -> .

    PUNTOCOMA       reduce using rule 141 (empty -> .)

    getIDFunc_np                   shift and go to state 6
    empty                          shift and go to state 7

state 6

    (1) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np . PUNTOCOMA gotoMain_np main
    (2) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np . PUNTOCOMA gotoMain_np clase main
    (3) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np . PUNTOCOMA gotoMain_np clase var main
    (4) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np . PUNTOCOMA gotoMain_np clase var funcion main
    (5) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np . PUNTOCOMA gotoMain_np clase funcion main
    (6) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np . PUNTOCOMA gotoMain_np var main
    (7) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np . PUNTOCOMA gotoMain_np var funcion main
    (8) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np . PUNTOCOMA gotoMain_np funcion main

    PUNTOCOMA       shift and go to state 8


state 7

    (155) getIDFunc_np -> empty .

    PUNTOCOMA       reduce using rule 155 (getIDFunc_np -> empty .)
    PARENTESISIZQ   reduce using rule 155 (getIDFunc_np -> empty .)


state 8

    (1) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA . gotoMain_np main
    (2) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA . gotoMain_np clase main
    (3) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA . gotoMain_np clase var main
    (4) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA . gotoMain_np clase var funcion main
    (5) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA . gotoMain_np clase funcion main
    (6) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA . gotoMain_np var main
    (7) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA . gotoMain_np var funcion main
    (8) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA . gotoMain_np funcion main
    (167) gotoMain_np -> . empty
    (141) empty -> .

    MAIN            reduce using rule 141 (empty -> .)
    CLASS           reduce using rule 141 (empty -> .)
    VAR             reduce using rule 141 (empty -> .)
    FUNC            reduce using rule 141 (empty -> .)

    gotoMain_np                    shift and go to state 9
    empty                          shift and go to state 10

state 9

    (1) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np . main
    (2) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np . clase main
    (3) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np . clase var main
    (4) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np . clase var funcion main
    (5) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np . clase funcion main
    (6) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np . var main
    (7) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np . var funcion main
    (8) programa -> PROGRAM getTypeFunc_np ID getIDFunc_np PUNTOCOMA gotoMain_np . funcion main
    (9) main -> . MAIN fillMain_np PARENTESISIZQ PARENTESISDER LLAVEIZQ LLAVEDER
    (10) main -> . MAIN fillMain_np PARENTESISIZQ PARENTESISDER LLAVEIZQ estatuto LLAVEDER
    (11) clase -> . CLASS ID getnameClass_np getSonClass_np saveClass_np DOSPUNTOS tipo_clase ID LLAVEIZQ bloque_clase LLAVEDER PUNTOCOMA
    (12) clase -> . CLASS ID getnameClass_np getSonClass_np saveClass_np DOSPUNTOS tipo_clase ID LLAVEIZQ bloque_clase LLAVEDER PUNTOCOMA clase
    (13) clase -> . CLASS ID getnameClass_np getSonClass_np saveClass_np DOSPUNTOS tipo_clase ID LLAVEIZQ LLAVEDER PUNTOCOMA
    (14) clase -> . CLASS ID getnameClass_np getSonClass_np saveClass_np DOSPUNTOS tipo_clase ID LLAVEIZQ LLAVEDER PUNTOCOMA clase
    (15) clase -> . CLASS ID getnameClass_np getFatherClass_np saveClass_np LLAVEIZQ bloque_clase LLAVEDER PUNTOCOMA
    (16) clase -> . CLASS ID getnameClass_np getFatherClass_np saveClass_np LLAVEIZQ bloque_clase LLAVEDER PUNTOCOMA clase
    (17) clase -> . CLASS ID getnameClass_np getFatherClass_np saveClass_np LLAVEIZQ LLAVEDER PUNTOCOMA
    (18) clase -> . CLASS ID getnameClass_np getFatherClass_np saveClass_np LLAVEIZQ LLAVEDER PUNTOCOMA clase
    (22) var -> . VAR scopeGlobal_np varp
    (40) funcion -> . FUNC tipo_simple_func ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA dec_var saveFunc_np cuerpo
    (41) funcion -> . FUNC tipo_simple_func ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA dec_var saveFunc_np cuerpo funcion
    (42) funcion -> . FUNC tipo_simple_func ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA saveFunc_np cuerpo
    (43) funcion -> . FUNC tipo_simple_func ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA saveFunc_np cuerpo funcion
    (44) funcion -> . FUNC VOID getTypeFunc_np ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA dec_var saveFunc_np cuerpo
    (45) funcion -> . FUNC VOID getTypeFunc_np ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA dec_var saveFunc_np cuerpo funcion
    (46) funcion -> . FUNC VOID getTypeFunc_np ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA saveFunc_np cuerpo
    (47) funcion -> . FUNC VOID getTypeFunc_np ID getIDFunc_np PARENTESISIZQ parametros PARENTESISDER PUNTOCOMA cuerpo saveFunc_np funcion

    MAIN            shift and go to state 15
    CLASS           shift and go to state 16
    VAR             shift and go to state 17
    FUNC            shift and go to state 18

    main                           shift and go to state 11
    clase                          shift and go to state 12
    var                            shift and go to state 13
    funcion                        shift and go to state 14

state 10
